# gratusmaximus

./: .dockerignore  .gitignore  .pyproject.toml  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml
assets/: evt-1Ah5VleTtMDiezj.json
kube/: .env.example  .gitignore  .terraform.lock.hcl  Pulumi.yaml  __main__.py  main.tf  providers.tf  provuders.tf
kube/modules/api_keys/: api_keys.tf  keyprovisioner.sh
kube/modules/gratters/: gratters.tf
kube/modules/gratus/: gratus.tf
kube/modules/maximus/: maximus.tf
kube/modules/ns/: ns.tf
kube/modules/psql/: psql.tf
migrations/: env.py
migrations/versions/: 2024_07_28_1813_e9f2f1d002fd_init.py  2024_08_02_1816_5beaac2febd8_add_gratter_type.py
scripts/: assert_key.py  deploy.sh  make_helpers.sh  manage_keys.py  seed.py
sdk/checks/: README.md  __init__.py  checks.py  checks_test.py  pyproject.toml
sdk/checks/checks/: __init__.py  (+2 more)
sdk/fibo/: pyproject.toml
sdk/gratus/: README.md  __init__.py  pyproject.toml
sdk/models/: README.md  __init__.py  init_test.py  pyproject.toml
services/eventbrite/: .pyproject.toml  __main__.py  parser.py  parser_test.py
services/gratters/: README.md
services/luma/: __main__.py  fetch_one.py  get_events.py  parser.py  parser_test.py
services/maximus/: Dockerfile  README.md  __main__.py  api.py  k8s.yaml  logs.py  main.py  pyproject.toml  security.py
services/maximus/database/: inject.py  migrations.py  schemas.py  schemas_test.py  upsert.py
services/maximus/database/seed/: __main__.py
services/maximus/ics/: __init__.py
services/maximus/maximus/: __main__.py  api.py  main.py  security.py
services/maximus/maximus/database/: inject.py  migrations.py  schemas.py  schemas_test.py  upsert.py
services/maximus/maximus/ics/: __init__.py
services/maximus/migrations/: script.py.mako
services/maximus/migrations/versions/: 2024_07_28_1813_e9f2f1d002fd_init.py  2024_07_28_1815_f0f00381a72a_add_name.py  2024_07_29_1103_e9cbb25a7560_add_apikeys.py  2024_08_02_1647_0fe8c00d5374_events.py
services/maximus/scripts/: seed.py
services/meetup/: __main__.py  collector.py  parser.py  parser_test.py
(+25 files in other folders)
