[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []

[project]
name = "gratus-maximus"
version = "0.1"
dependencies = []
requires-python = ">=3.11"

[project.optional-dependencies]
dev = [
  "ruff",
  "mypy",
]

[tool.mypy]
python_version = "3.11"
disallow_untyped_defs=true
disallow_untyped_calls=true
disallow_incomplete_defs=true
disallow_untyped_decorators=true
no_implicit_optional=false
strict_equality=true
show_error_codes=true
warn_unreachable=true
warn_redundant_casts=true
warn_unused_ignores=true
warn_unused_configs=true
namespace_packages=true
pretty=true
files="services, sdk"
exclude=[
    ".venv/",
    ".git/",
    ".tox/",
    "dist/",
    "build/",
    "__pycache__/",
]
plugins = "pydantic.mypy"
