[project]
name = "gratus-maximus"
requires-python = ">=3.13.0,<3.14.0"
version = "0.1"
dependencies = [
  "openai",
  "httpx",
  "pydantic",
  "pytz",
  "fastapi",
  "sqlalchemy",
  "psycopg2-binary",
  "alembic",
  "uvicorn",
  "icalendar",
]

[dependency-groups]
dev = [
  "ruff",
  "mypy",
  "pytest",
  "types-icalendar",
]

[tool.mypy]
plugins = "sqlalchemy.ext.mypy.plugin,pydantic.mypy"
