[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools >= 61.0"]

[tool.setuptools]
py-modules = ["maximus"]

[project]
dependencies = [
  "fastapi",
  "sqlalchemy==2.0.29",
  "psycopg2-binary==2.9.9",
  "alembic==1.13.1",
  "uvicorn==0.30.5",
]
name = "maximus"
requires-python = ">=3.11"
version = "0.1"

[project.optional-dependencies]
dev = [
  "sqlalchemy[mypy]",
]
